Mobile navmenu z-index correction

--- a/src/hamburger/mobilenavi.scss
+++ b/src/hamburger/mobilenavi.scss
@@ -40,6 +40,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    z-index: 1;
 
     .mobilenavi {
       width: 100%;
@@ -53,11 +54,13 @@
       flex-direction: column;
       align-items: center;
       position: relative;
-      z-index: -1;
+
+
 
       li{
         width: 100%;
         padding: 7px;
+
       }
 
     }
